@@ -1,0 +1,5 @@
+require File.dirname(__FILE__) + '/helper'
+
+class TestHttpResponseCode < Test::Unit::TestCase
+  
+end
